--- a/reports/mt-thesis/discothesis.cls
+++ b/reports/mt-thesis/discothesis.cls
@@ -118,6 +118,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage{booktabs}
+
+
 \newcommand\@ptsize{}
 \newif\if@restonecol
 \newif\if@titlepage
